# EmcalRun3Converter

./: CMakeLists.txt
EMCALRun3Converter/: CMakeLists.txt
EMCALRun3Converter/include/EMCALRun3Converter/: AliAnalysisTaskEmcalRun3ConverterCells.h  AliAnalysisTaskEmcalRun3ConverterDigits.h  AliEmcalCalibDBConverter.h  AliEmcalRawConverter.h  LinkDef.h
EMCALRun3Converter/src/: AliAnalysisTaskEmcalRun3ConverterCells.cxx  AliAnalysisTaskEmcalRun3ConverterDigits.cxx  AliEmcalCalibDBConverter.cxx  AliEmcalRawConverter.cxx  runEmcalRun3CellsConverter.cxx  runEmcalRun3ConverterCalib.cxx  runEmcalRun3DigitsConverter.cxx  runEmcalRun3RawConverter.cxx
cmake/modules/: FindAliRoot.cmake  FindAliceO2.cmake  FindAliroot.cmake  FindO2.cmake
macros/: AddTaskEmcalRun3ConverterCells.C  AddTaskEmcalRun3ConverterDigits.C  runEmcalRun3DigitsConverter.C  splitDigitsFile.C
src/: AliAnalysisTaskEmcalRun3ConverterDigits.cxx  AliAnalysisTaskEmcalRun3ConverterDigits.h  CMakeLists.txt  EmcalRun3ConverterLinkDef.h  runEmcalRun3DigitsConverter.cxx
